feat: add plans

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -255,23 +255,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(319795, 18)"
+       "((319795, 18),\n",
+       " ['HeartDisease',\n",
+       "  'BMI',\n",
+       "  'Smoking',\n",
+       "  'AlcoholDrinking',\n",
+       "  'Stroke',\n",
+       "  'PhysicalHealth',\n",
+       "  'MentalHealth',\n",
+       "  'DiffWalking',\n",
+       "  'Sex',\n",
+       "  'AgeCategory',\n",
+       "  'Race',\n",
+       "  'Diabetic',\n",
+       "  'PhysicalActivity',\n",
+       "  'GenHealth',\n",
+       "  'SleepTime',\n",
+       "  'Asthma',\n",
+       "  'KidneyDisease',\n",
+       "  'SkinCancer'])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Number of features and instances\n",
-    "df_full.shape"
+    "df_full.shape, df_full.columns.to_list()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Plans"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Vấn đề:\n",
+    "\n",
+    "Đây là một dataset lớn với 319795 hàng và 18 cột, thể hiện các yếu tố sức khỏe có thể liên quan đến nguy cơ mắc bệnh tim.\n",
+    "\n",
+    "### Thuộc tính đã có: có 17 thuộc tính độc lập:\n",
+    "- 'BMI',\n",
+    "- 'Smoking',\n",
+    "- 'AlcoholDrinking',\n",
+    "- 'Stroke',\n",
+    "- 'PhysicalHealth',\n",
+    "- 'MentalHealth',\n",
+    "- 'DiffWalking',\n",
+    "- 'Sex',\n",
+    "- 'AgeCategory',\n",
+    "- 'Race',\n",
+    "- 'Diabetic',\n",
+    "- 'PhysicalActivity',\n",
+    "- 'GenHealth',\n",
+    "- 'SleepTime',\n",
+    "- 'Asthma',\n",
+    "- 'KidneyDisease',\n",
+    "- 'SkinCancer'\n",
+    "\n",
+    "### Biến phụ thuộc:\n",
+    "\n",
+    "Chính là tình trạng bệnh tim của người đó 'HeartDisease'\n",
+    "\n",
+    "### Mục tiêu:\n",
+    "\n",
+    "Với phần preprocessing, tôi sẽ tìm hiểu xem những yếu tố nào ảnh hưởng đến khả năng mắc bệnh tim của một người, từ đó có thể đưa ra các yếu tố giúp dự đoán khả năng này. Tôi sẽ dùng một số công cụ kiểm định thống kê, trực quan hóa cho mục đích trên.\n",
+    "\n",
+    "Cuối cùng, tôi sẽ biến đổi data cho phù hợp với việc sử dụng các thuật toán học máy. Như chúng ta thấy, rất nhiều cột dữ liệu được thể hiện dưới loại dữ liệu object, chúng ta cần biến đổi chúng thành kiểu dữ liệu mà các thuật toán học máy có thể hiểu. Đồng thời, đối với một số cột dữ liệu như BMI, sleep time, tôi sẽ sử dụng binning để vừa thuận tiện cho việc tìm hiểu mối tương quan, và cũng có thể cải thiện kết quả mô hình"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Visualize data\n",
+    "2. Hypothesis testing\n",
+    "3. Transform data"
    ]
   }
  ],
