docs: edit plans

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -308,23 +308,23 @@
     "Đây là một dataset lớn với 319795 hàng và 18 cột, thể hiện các yếu tố sức khỏe có thể liên quan đến nguy cơ mắc bệnh tim.\n",
     "\n",
     "### Thuộc tính đã có: có 17 thuộc tính độc lập:\n",
-    "- 'BMI',\n",
-    "- 'Smoking',\n",
-    "- 'AlcoholDrinking',\n",
-    "- 'Stroke',\n",
-    "- 'PhysicalHealth',\n",
-    "- 'MentalHealth',\n",
-    "- 'DiffWalking',\n",
-    "- 'Sex',\n",
-    "- 'AgeCategory',\n",
-    "- 'Race',\n",
-    "- 'Diabetic',\n",
-    "- 'PhysicalActivity',\n",
-    "- 'GenHealth',\n",
-    "- 'SleepTime',\n",
-    "- 'Asthma',\n",
-    "- 'KidneyDisease',\n",
-    "- 'SkinCancer'\n",
+    "- 'BMI': Continuous,\n",
+    "- 'Smoking': Categorical,\n",
+    "- 'AlcoholDrinking' : Categorical,\n",
+    "- 'Stroke': Categorical,\n",
+    "- 'PhysicalHealth': Continuous,\n",
+    "- 'MentalHealth': Continuous,\n",
+    "- 'DiffWalking': Categorical,\n",
+    "- 'Sex': Categorical,\n",
+    "- 'AgeCategory': Categorical,\n",
+    "- 'Race': Categorical,\n",
+    "- 'Diabetic': Categorical,\n",
+    "- 'PhysicalActivity': Categorical,\n",
+    "- 'GenHealth': Continuous,\n",
+    "- 'SleepTime': Continuous,\n",
+    "- 'Asthma': Categorical,\n",
+    "- 'KidneyDisease': Categorical,\n",
+    "- 'SkinCancer': Categorical\n",
     "\n",
     "### Biến phụ thuộc:\n",
     "\n",
@@ -332,7 +332,11 @@
     "\n",
     "### Mục tiêu:\n",
     "\n",
-    "Với phần preprocessing, tôi sẽ tìm hiểu xem những yếu tố nào ảnh hưởng đến khả năng mắc bệnh tim của một người, từ đó có thể đưa ra các yếu tố giúp dự đoán khả năng này. Tôi sẽ dùng một số công cụ kiểm định thống kê, trực quan hóa cho mục đích trên.\n",
+    "Đầu tiên tôi sẽ tìm hiểu một vài thông tin thống kê của dataset như tỷ lệ mắc bệnh tim chung, phân phối của các thuộc tính, phát hiện các vấn đề có thể không phù hợp như outlier\n",
+    "\n",
+    "Tiếp theo, tôi sẽ tìm hiểu xem những yếu tố nào ảnh hưởng đến khả năng mắc bệnh tim của một người, từ đó có thể đưa ra các yếu tố giúp dự đoán khả năng này. Tôi sẽ dùng một số công cụ kiểm định thống kê, trực quan hóa cho mục đích trên.\n",
+    "\n",
+    "Một vài thuộc tính có thể sẽ khó có sẵn khi vào thực tế, có thể chúng ta sẽ cần chọn lựa ra các thuộc tính thực sự có thể ứng dụng.\n",
     "\n",
     "Cuối cùng, tôi sẽ biến đổi data cho phù hợp với việc sử dụng các thuật toán học máy. Như chúng ta thấy, rất nhiều cột dữ liệu được thể hiện dưới loại dữ liệu object, chúng ta cần biến đổi chúng thành kiểu dữ liệu mà các thuật toán học máy có thể hiểu. Đồng thời, đối với một số cột dữ liệu như BMI, sleep time, tôi sẽ sử dụng binning để vừa thuận tiện cho việc tìm hiểu mối tương quan, và cũng có thể cải thiện kết quả mô hình"
    ]
@@ -341,9 +345,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Visualize data\n",
-    "2. Hypothesis testing\n",
-    "3. Transform data"
+    "Chúng ta sẽ đi qua các bước\n",
+    "1. Statistical Analysis\n",
+    "1. Feature Selection\n",
+    "1. Data Transformation"
    ]
   }
  ],
