docs: edit plans

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -303,9 +303,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Vấn đề:\n",
-    "\n",
-    "Đây là một dataset lớn với 319795 hàng và 18 cột, thể hiện các yếu tố sức khỏe có thể liên quan đến nguy cơ mắc bệnh tim.\n",
+    "### Mục tiêu:\n",
+    "- Phân tích được các yếu tố có thể liên quan đến tình trạng tim mạch của một người.\n",
+    "- Trực quan hóa các thông tin quan trọng\n",
+    "- Biến đổi data thành dạng dữ liệu thân thiện với học máy\n",
     "\n",
     "### Thuộc tính đã có: có 17 thuộc tính độc lập:\n",
     "- 'BMI': Continuous,\n",
@@ -328,9 +329,9 @@
     "\n",
     "### Biến phụ thuộc:\n",
     "\n",
-    "Chính là tình trạng bệnh tim của người đó 'HeartDisease'\n",
+    "Khả năng mắc bệnh tim của một người. Bộ dữ liệu của chúng ta không có sẵn số liệu này, thay vào đó là tình trạng mắc bệnh tim 'HeartDisease'.\n",
     "\n",
-    "### Mục tiêu:\n",
+    "### Mô tả kế hoạch:\n",
     "\n",
     "Đầu tiên tôi sẽ tìm hiểu một vài thông tin thống kê của dataset như tỷ lệ mắc bệnh tim chung, phân phối của các thuộc tính, phát hiện các vấn đề có thể không phù hợp như outlier\n",
     "\n",
