feat: add visualization

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -1025,13 +1025,13 @@
     "for col in cat_cols:\n",
     "    if col not in pie_charts:\n",
     "        # Heart disease\n",
-    "        sns.countplot(x=HD[col], order=sorted(HD[col].unique(), reverse=True), ax=ax[i][0])\n",
+    "        sns.countplot(x=HD[col], order=sorted(HD[col].unique()), ax=ax[i][0])\n",
     "        ax[i][0].set_title('Heart Disease '+col)\n",
     "        labels = ax[i][0].get_xticklabels()\n",
     "        labels = map(truncate_text(), labels)\n",
     "        ax[i][0].set_xticklabels(labels = labels,rotation=90)\n",
     "        # Non heart disease\n",
-    "        sns.countplot(x=non_HD[col], ax=ax[i][1], order=sorted(non_HD[col].unique(), reverse=True))\n",
+    "        sns.countplot(x=non_HD[col], ax=ax[i][1], order=sorted(non_HD[col].unique()))\n",
     "        ax[i][1].set_title('Non Heart Disease '+col)\n",
     "        labels = ax[i][1].get_xticklabels()\n",
     "        labels = map(truncate_text(), labels)\n",
@@ -1396,7 +1396,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.8"
   },
   "orig_nbformat": 4
  },
