docs: add a comment

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -2017,6 +2017,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Save to files"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 92,
    "metadata": {},
